--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,7 @@
 </head>
 <body>
   <app-root></app-root>
-</body>
+</body>  
+<script src="https://unpkg.com/hammerjs@2.0.8/hammer.min.js"></script>
+<script src="https://unpkg.com/muuri@0.7.1/dist/muuri.min.js"></script>
 </html>
